--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@ layout: default
   <ul>
     {% for post in site.posts %}
     <li>
-      <a href="{{ post.url }}">
-        {{ post.title }}
-      </a>
-      - ({{post.date | date_to_string}})
-      <div style="padding:10px 10px 1px 10px;margin:0px 0px 0px 30px;">
+      <div class="posts-title">
+        <a href="{{ post.url }}">
+          {{ post.title }}
+        </a>
+        - ({{post.date | date_to_string}})
+      </div>
+      <div class="posts-excerpt">
         {{ post.excerpt }}
       </div>
     </li>
